--- a/Code/SISTORE/nbproject/project.properties
+++ b/Code/SISTORE/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/SISTORE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=..\\..\\Instalador\\jcalendar-1.4.jar
+file.reference.poi-3.9-20121203.jar=..\\..\\Instalador\\poi-3.9-20121203.jar
+file.reference.sqljdbc42.jar=..\\..\\Instalador\\sqljdbc42.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
