--- a/Code/SISTORE/nbproject/project.properties
+++ b/Code/SISTORE/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/SISTORE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=..\\..\\Instalador\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\anroq\\3D Objects\\ControlDeAsitencia\\dist\\lib\\mysql-connector-java-5.1.47.jar
 file.reference.poi-3.9-20121203.jar=..\\..\\Instalador\\poi-3.9-20121203.jar
 file.reference.sqljdbc42.jar=..\\..\\Instalador\\sqljdbc42.jar
 includes=**
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.poi-3.9-20121203.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
