--- a/Code/SISTORE/nbproject/project.properties
+++ b/Code/SISTORE/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SISTORE
+application.vendor=kflores
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,9 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SISTORE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=..\\..\\Instalador\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\anroq\\3D Objects\\ControlDeAsitencia\\dist\\lib\\mysql-connector-java-5.1.47.jar
 file.reference.poi-3.9-20121203.jar=..\\..\\Instalador\\poi-3.9-20121203.jar
 file.reference.sqljdbc42.jar=..\\..\\Instalador\\sqljdbc42.jar
 includes=**
@@ -36,8 +37,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.poi-3.9-20121203.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
